--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,7 +12,7 @@ android {
             jniLibs.srcDirs = ['libs']
         }
 
-        instrumentTest.setRoot('tests')
+        instrumentTest.setRoot('com.gdimitris.boxcrush.tests')
     }
     packagingOptions {
         exclude 'META-INF/robovm/ios/robovm.xml'
