--- a/core/build.gradle
+++ b/core/build.gradle
@@ -9,3 +9,8 @@ sourceSets.main.java.srcDirs = [ "src/" ]
 eclipse.project {
     name = appName + "-core"
 }
+
+dependencies {
+    compile 'org.testng:testng:6.9.6'
+    compile 'org.mockito:mockito-core:2.7.22'
+}
